After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 599397 - Button stuck at pressed look after screen rotation
Button stuck at pressed look after screen rotation
Status: RESOLVED FIXED
Product: gtk+
Classification: Platform
Component: Widget: Other
2.18.x
Other Linux
: Normal normal
: ---
Assigned To: gtk-bugs
gtk-bugs
Depends on:
Blocks:
 
 
Reported: 2009-10-23 11:59 UTC by Christian Dywan
Modified: 2009-12-11 16:18 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Reset pressed state when needed on screen change (1002 bytes, patch)
2009-10-23 12:09 UTC, Christian Dywan
none Details | Review

Description Christian Dywan 2009-10-23 11:59:26 UTC
I discovered this on Maemo. The screen rotates in certain cases, such as when flipping the keyboard or holding the device upright. If you hold a button pressed while triggering a rotation, the button never receives the release event and thus remains pressed forever.
Comment 1 Christian Dywan 2009-10-23 12:09:43 UTC
Created attachment 146097 [details] [review]
Reset pressed state when needed on screen change

I solved this by making the button reset its pressed state on screen change.
Comment 2 Michael Natterer 2009-12-10 10:37:23 UTC
That patch looks sane to me, given you verified that it works ;)
Comment 3 Christian Dywan 2009-12-11 16:18:44 UTC
Pushed to master.