Reset the pressed state of a button when the screen changes

Fixes: https://bugzilla.gnome.org/show_bug.cgi?id=599397